--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/core": "^11.1.9",
     "@nestjs/cqrs": "^11.0.3",
     "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/swagger": "^11.2.5",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
